<resources>
    <string name="app_name">Carcassonne Custom Clone</string>
    <string name="game_title">Carcassonne</string>
    <string name="play">Play</string>
    <string name="rules">Rules</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="title_rules">Rules</string>
    <string name="title_info">About</string>
    <string name="title_players">Choose players</string>
    <string name="title_settings">Settings</string>
    <string name="title_effects">Effects</string>
    <string name="title_music">Music</string>
    <string name="title_pause">Pause</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit_question">Do you really want to exit?</string>
    <string name="name_change">Enter the new name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="resume">Resume</string>
    <string name="exit_to_menu">Exit to menu</string>
    <string name="remaining_tiles">Remaining tiles</string>
    <string name="loading">Loading</string>
    <string name="info_text"><![CDATA[
    <br><b>Каркассон</b> (нем. Carcassonne) — настольная стратегически-экономическая игра немецкого стиля.<br>
    Разработана Клаусом-Юргеном Вреде в 2000 году, впервые издана компанией Hans im Glück в Германии. В 2001 году была удостоена награды «Игра года» в Германии. В настоящее время Каркассон выпускается многими мировыми издателями настольных игр, и на 2018 год в мире продано более 10 миллионов экземпляров игры (включая дополнения). <br>
        Игра заключается в пошаговом собирании игрового поля и размещении на нём фишек своих подданных. В зависимости от того, на какую местность поставлена фишка, она становится рыцарем, крестьянином, монахом или разбойником.]]></string>

    <string name="rules_text"><![CDATA[
    <b>Подготовка к игре</b> <br>
    1. Стартовый шестиугольник кладется посередине стола <br>
    2. У каждого игрока есть 7 фишек одного из цветов. <br>
    3. Выберается случайным образом игрок, который начнёт игру. <br>
    <b>Ход игры </b><br>
    Игроки ходят по очереди, начиная с первого игрока. Каждый ход протекает по одной и той же схеме: <br>
    1. Игрок тянет один из закрытых шестиугольников и присоединяет его к уже выложенным на стол. <br>
    2. Игрок может поместить фишку на только что сыгранный шестиугольник. <br>
    3. Если, только что выложенный шестиугольник привёл к завершению дороги, города или монастыря, происходит подсчёт очков.<br>
    <b>Как сыграть шестиугольник</b><br>
    1. Прежде всего, вытягивается один из шестиугольников, лежащих рубашкой вверх. <br>
    2. Остальные игроки имеют право высказать своё мнение относительно того, куда его лучше положить, однако вы не обязаны их слушаться. <br>
    3. Присоедините шестиугольник к уже выложенным на стол. <br>
    <b>При этом должны соблюдаться следующие правила: </b> <br>
    1. Новый шестиугольник должен соприкасаться с уже выложенным ранее хотя бы одной стороной.<br>
    2. В месте соприкосновения сторон все дороги должны переходить в дороги, поля – в поля, а стены городов – в стены городов (выкладываемая из шестиугольников «географическая карта» должна оставаться цельной). <br>
    <b>Как выставить фишку </b> <br>
    При желании вы можете поместить свою фишку на только что сыгранный вами шестиугольник. При этом должны соблюдаться следующие правила: <br>
    1. На каждом ходу вы можете выставить только одну фишку. <br>
    2. Эта фишка должна быть взята из вашего запаса (а не из числа помещённых на карту ранее). <br>
    3. Если все ваши фишки находятся на карте, вы не можете поместить фишку, пока хотя бы одна из них не вернётся в ваш запас в результате подсчёта очков. <br>
    Вы должны определить, на какую часть шестиугольника ставите фишку: Кроме этого, вы не можете поместить свою фишку на дорогу, в город или в поле, если где- нибудь на этих же дороге, городе, поле уже находится фишка (ваша или вашего соперника).
    Если в запасе у игрока не осталось фишек, ему придётся выставлять новые шестиугольники пустыми и ждать, пока какая-либо из сыгранных фишек вернётся в запас. Если после выставления шестиугольника произошло завершение строительства города, дороги или монастыря, производится подсчёт очков и возвращение соответствующих фишек в запас игроков. На этом ход игрока заканчивается и передаётся следующему игроку. Обратите внимание, что на поле, дороге или в городе, тем не менее, может быть несколько ваших фишек или фишек других игроков. Это происходит в тех случаях, когда фигурка была выставлена на участок до того, как он соединился с другим участком в единое целое. <br>
    <b>Завершение строительства дороги </b> <br>
    Дорога считается построенной, если оба её конца упираются в перекрёсток, город или монастырь. Игрок, чей разбойник стоит на построенной дороге, получает столько победных очков, какова длина этой дороги (по количеству шестиугольников).Если на построенной дороге больше одного разбойника, победные очки за неё получает только тот игрок, у которого больше разбойников на этой дороге. Если наблюдается равенство в количестве разбойников на этой дороге, то каждый из игроков получает столько победных очков, сколько приносит эта дорога. <br>
    <b>Завершение строительства города </b> <br>
    Город считается построенным, если всё внутреннее пространство окружено стенами. Игрок, чей рыцарь стоит в построенном городе, получает по 2 победных очка за каждый шестиугольник. <br>
    <b>Завершение строительство монастыря </b> <br>
    Монастырь считается построенным, если шестиугольник, на котором он находится, со всех сторон окружён другими шестиугольниками. Игрок, чей монах стоит в построенном монастыре, получает 9 победных очков, а затем возвращает фишку с завершённого монастыря в свой запас. <br>
    <b>Конец игры </b> <br>
    Игра заканчивается, когда к карте будет присоединён последний оставшийся шестиугольник. <br>
    <b>Окончательный подсчёт очков. </b> <br>
    Подсчитываются все недостроенные дороги, города и монастыри:<br>
    · Каждый игрок, у которого имеется разбойник на недостроенной дороге, получает 1 победное очко за каждый шестиугольник, на котором располагается эта дорога. <br>
    · Каждый игрок, у которого имеется рыцарь в недостроенном городе, получает 1 победное очко за каждый шестиугольник, на котором располагается этот город (и 1 очко за каждый щит в этом городе). <br>
    · Каждый игрок, у которого имеется монах в недостроенном монастыре, получает 1 победное очко за каждый шестиугольник, окружающий шестиугольник монастыря (по горизонтали, вертикали и диагонали), включая сам шестиугольник с монастырём. При этом игроки передвигают на соответствующее число делений свои фишки на шкале подсчёта очков. Если в городе или на дороге стоят рыцари или разбойники нескольких игроков, то очки получает, лишь тот, у кого рыцарей или разбойников больше. При равенстве количества рыцарей в городе или разбойников на дороге очки получают и тот, и другой игрок в полном объёме.<br>
    <b>Победа в игре </b> <br>
    После того как очки подсчитаны, игра заканчивается. Победителем объявляется игрок, набравший наибольшее количество очков.
]]></string>

</resources>
