...
              android:layout_height="wrap_content"
              android:text="@string/title_players"
              android:id="@+id/title"
              style="@style/TitleText"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintBottom_toTopOf="@id/playerArea"
              android:layout_marginBottom="@dimen/default_margin"
    />

    <Button
            style="@style/MenuButtonStyle"
            android:text="@string/back"
...
                  app:layout_constraintRight_toRightOf="parent">

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:background="@color/colorMenuButton"
                      android:id="@+id/playerIcons"
        />

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:background="@color/colorMenuButton"
...
