...
        android:layout_height="match_parent"
        tools:context=".GameActivity">


    <ImageButton android:layout_width="@dimen/game_button_size"
                 android:layout_height="@dimen/game_button_size"
                 android:id="@+id/pauseButton"
                 app:srcCompat="@drawable/ic_menu"
                 android:scaleType="fitXY"
                 android:background="@drawable/button_rounded_corners"
                 android:padding="@dimen/default_padding"
                 android:layout_margin="@dimen/default_margin"
                 app:layout_constraintRight_toRightOf="parent"
...
            android:elevation="10dp"
    />


    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="0dp"
                  android:id="@+id/playerInfoArea"
                  android:orientation="vertical"
                  android:elevation="10dp"
    />


    <ImageButton android:layout_width="@dimen/current_tile_view_size"
...
